# pifp-stellar

backend/indexer/: Cargo.toml  README.md
backend/indexer/migrations/: 003_create_webhooks_tables.sql
backend/indexer/src/: api.rs  cache.rs  config.rs  db.rs  events.rs  indexer.rs  main.rs  rpc.rs  webhook.rs
contracts/pifp_protocol/: Cargo.toml
contracts/pifp_protocol/src/: bench_test.rs  errors.rs  events.rs  lib.rs  rbac.rs  storage.rs  test_errors.rs  test_events.rs  test_reclaim.rs  test_refund.rs  types.rs
contracts/pifp_protocol/test_snapshots/bench_test/: bench_create_project.1.json  bench_deposit.1.json  bench_initialize.1.json  bench_release.1.json  bench_set_fee_bps.1.json  bench_set_treasury.1.json  bench_update_metadata.1.json  bench_withdraw.1.json
contracts/pifp_protocol/test_snapshots/tests/: test_create_project_rejects_empty_cid.1.json  test_create_project_stores_metadata_cid.1.json  test_double_initialize_panics.1.json  test_release_splits_fee_correctly.1.json  test_release_with_zero_fee.1.json  test_release_zero_amount_panics.1.json  test_set_fee_bps_updates_config.1.json  test_set_treasury_non_admin_panics.1.json  test_set_treasury_updates_address.1.json  test_update_metadata_bumps_version_and_cid.1.json  test_update_metadata_rejects_non_creator.1.json
